--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: SonarQube Scan
+name: Build
 
 on:
   push:
@@ -6,34 +6,26 @@ on:
       - main
 
 jobs:
-  sonarqube:
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    
+    permissions: read-all
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-    - name: Set up Docker
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        with:
+          args: -X
 
-    - name: Start SonarQube container
-      run: docker run -d --name sonarqube -p 9000:9000 sonarqube
-
-    - name: Wait for SonarQube to start
-      run: sleep 30
-
-    - name: SonarQube Scan
-      run: docker run --rm -e SONAR_TOKEN=${{secrets.SONAR_TOKEN}} -e SONAR_HOST_URL=${{secrets.SONAR_HOST_URL}} -v $(pwd):/usr/src sonarsource/sonar-scanner-cli:latest -X
-
-    - name: Stop SonarQube container
-      run: docker stop sonarqube
-
-    - name: Debugging Output
-      run: |
-        echo "SONAR_TOKEN: $SONAR_TOKEN"
-        echo "SONAR_HOST_URL: $SONAR_HOST_URL"
-
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
+      # - uses: sonarsource/sonarqube-quality-gate-action@master
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
